--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@ body {
             <p class="lead">
               <a href="http://getbootstrap.com/examples/cover/#" class="btn btn-lg btn-default">Learn more</a>
             </p>-->
-            <a href="http://tcole19.wix.com/tkcarch"><img src="WelcomePageHeader.jpg" style="width:100%"></a>
+            <a href="http://tkcarch.wixsite.com/archportfolio"><img src="WelcomePageHeader.jpg" style="width:100%"></a>
           </div>
 
           <div class="mastfoot">
